--- a/src/components/introduction/Introduction.css
+++ b/src/components/introduction/Introduction.css
@@ -1,3 +1,13 @@
 .introduction {
     grid-area: introduction;
 }
+
+.intruduction__text {
+    width: 100%;
+    height: 10rem;
+}
+
+textarea {
+    width: 100%;
+    height: 10rem;
+}
