--- a/src/components/editable/editable-text-area/EditableTextArea.css
+++ b/src/components/editable/editable-text-area/EditableTextArea.css
@@ -1,7 +1,13 @@
+.editable-text-area {}
+
 .static-text {
     position: relative;
+    /* height: 100%; */
     padding: .5rem;
+    border-radius: .25rem;
     transition: all 0.15s ease-out;
+    cursor: pointer;
+    z-index: 2;
 }
 
 .static-text:hover {
@@ -9,13 +15,48 @@
 
 }
 
+.editable-text {
+    position: relative;
+    z-index: 2;
+}
+
+textarea {
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    padding: .5rem;
+    border-radius: .25rem;
+    border: 1px solid var(--purple);
+}
+
 button {
     position: absolute;
-    right: .5rem;
+    right: 0rem;
     bottom: -2rem;
     border: none;
-    background-color: var(--white);
-    box-shadow: 0px 2px 4px var(--blue);
-    padding: .2rem;
+    font-size: 1.4rem;
+    background-color: var(--purple);
+    color: var(--white);
+    padding: .4rem;
     border-radius: .5rem;
+    transition: all 0.15s ease-out;
+    cursor: pointer;
+    user-select: none;
+    z-index: 2;
+
+}
+
+button:hover {
+    transform: translateY(1px);
+}
+
+.close-modal {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
