--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,15 +1,37 @@
 .skills {
     grid-area: skills;
+    height: 100%;
     border-left: .2rem solid var(--purple-light);
     padding: 1rem 2rem 1rem 2rem;
+    position: relative;
 
 }
 
-.icons {
+.icons-wrapper {
+    position: relative;
+    height: 80%;
+}
+
+.icons-user {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
     justify-content: flex-start;
+}
+
+.icon-selection {
+    position: absolute;
+    bottom: -10rem;
+    right: -1rem;
+    height: 10rem;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    justify-content: flex-start;
+    background-color: var(--white);
+    box-shadow: 0px .5rem 10px rgba(0, 0, 0, .4);
+    padding: 1rem 2rem 1rem 2rem;
 }
 
 .icon {
