--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -32,6 +32,7 @@
     background-color: var(--white);
     box-shadow: 0px .5rem 10px rgba(0, 0, 0, .4);
     padding: 1rem 2rem 1rem 2rem;
+    transition: all 0.15s ease-out;
 }
 
 .icon {
