--- a/src/components/section-title/SectionTitle.css
+++ b/src/components/section-title/SectionTitle.css
@@ -1,8 +1,28 @@
 .section-title {
     display: flex;
+    align-items: center;
+    gap: 1rem;
     font-size: 1.4rem;
     font-weight: 700;
     letter-spacing: .2rem;
     text-transform: uppercase;
     margin-bottom: 1rem;
+
+}
+
+.section-title button {
+    border-radius: 20rem;
+    width: 1.8rem;
+    height: 1.8rem;
+    font-weight: 700;
+    font-size: 1.4rem;
+    background-color: var(--yellow);
+    color: var(--white);
+    border: none;
+    transition: all .1s ease-out;
+    cursor: pointer;
+}
+
+.section-title button:hover {
+    filter: brightness(1.1);
 }
