--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -3,13 +3,18 @@
     height: 100%;
     border-left: .2rem solid var(--purple-light);
     padding: 1rem 2rem 1rem 2rem;
-    position: relative;
+}
 
+.skills-wrapper {
+    height: 100%;
+    position: relative;
+    z-index: 2;
 }
 
 .icons-wrapper {
     position: relative;
     height: 80%;
+
 }
 
 .icons-user {
@@ -17,12 +22,13 @@
     flex-wrap: wrap;
     gap: 1.5rem;
     justify-content: flex-start;
+
 }
 
 .icon-selection {
     position: absolute;
     bottom: -10rem;
-    right: -1rem;
+    right: 0rem;
     height: 10rem;
     width: 100%;
     display: flex;
@@ -33,6 +39,8 @@
     box-shadow: 0px .5rem 10px rgba(0, 0, 0, .4);
     padding: 1rem 2rem 1rem 2rem;
     transition: all 0.15s ease-out;
+    z-index: 2;
+
 }
 
 .icon {
@@ -46,11 +54,12 @@
     transform: scale(1.05);
 }
 
-/* .skills::before {
-    content: "";
+.close-modal {
     position: absolute;
-    width: .4rem;
+    background-color: rgba(255, 255, 255, 0);
+    width: 100%;
     height: 100%;
-
-    background-color: var(--blue);
-} */
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
