--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -36,7 +36,9 @@
     gap: 1.5rem;
     justify-content: flex-start;
     background-color: var(--white);
-    box-shadow: 0px .5rem 10px rgba(0, 0, 0, .4);
+    border: 1px solid var(--purple-light);
+    border-radius: .5rem;
+    box-shadow: 0px .5rem 10px rgba(0, 0, 0, .2);
     padding: 1rem 2rem 1rem 2rem;
     transition: all 0.15s ease-out;
     z-index: 2;
@@ -62,4 +64,10 @@
     top: 0;
     left: 0;
     z-index: 1;
+}
+
+.icon-selection button {
+    position: absolute;
+    top: .3rem;
+    right: .3rem;
 }
