--- a/src/components/editable/editable-text-area/EditableTextArea.css
+++ b/src/components/editable/editable-text-area/EditableTextArea.css
@@ -10,10 +10,14 @@
     transition: all 0.15s ease-out;
     cursor: pointer;
     z-index: 2;
+    border: 1px solid rgba(255, 255, 255, 0);
 }
 
 .static-text:hover {
-    background-color: var(--purple-light);
+    /* background-color: var(--purple-light);
+    color: var(--white); */
+
+    border: 1px solid var(--purple);
 
 }
 
