--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -1,4 +1,55 @@
 .experience {
     grid-area: experience;
     padding: 1rem 2rem 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.job {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto 1fr;
+    grid-template-areas:
+        "position    company"
+        "date        date"
+        "description description";
+
+    margin-bottom: 2rem;
+}
+
+.position {
+    grid-area: position;
+    font-size: 1.3rem;
+    font-weight: 700;
+    text-align: right;
+    margin-bottom: .5rem;
+    letter-spacing: .1rem;
+}
+
+.company {
+    grid-area: company;
+    font-size: 1.3rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
+}
+
+.company::before {
+    content: "|";
+}
+
+.date {
+    grid-area: date;
+    text-align: right;
+    font-size: 1.2rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+.description {
+    grid-area: description;
+    font-size: 1.1rem;
+    font-weight: 500;
+
 }
