--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ html {
 
 body {
   font-size: 1rem;
-  line-height: 1.6;
+  line-height: 1.4;
 }
 
 .btn-round {
@@ -44,6 +44,7 @@ body {
   border: none;
   transition: all .1s ease-out;
   cursor: pointer;
+  user-select: none;
 }
 
 .btn-round:hover {
