--- a/src/components/editable/editable-text-area/EditableTextArea.css
+++ b/src/components/editable/editable-text-area/EditableTextArea.css
@@ -1,10 +1,10 @@
 .editable-text-area {
-    overflow-wrap: anywhere
+    overflow-wrap: anywhere;
 }
 
-.static-text {
+.editable-text-area .static-text {
     position: relative;
-    /* height: 100%; */
+    height: 100%;
     padding: .5rem;
     border-radius: .25rem;
     transition: all 0.15s ease-out;
@@ -13,15 +13,12 @@
     border: 1px solid rgba(255, 255, 255, 0);
 }
 
-.static-text:hover {
-    /* background-color: var(--purple-light);
-    color: var(--white); */
-
+.editable-text-area .static-text:hover {
     border: 1px solid var(--purple);
 
 }
 
-.editable-text {
+.editable-text-area .editable-text {
     position: relative;
     z-index: 2;
 }
@@ -40,15 +37,6 @@
     position: absolute;
     right: 0rem;
     bottom: -2rem;
-    border: none;
-    font-size: 1.4rem;
-    background-color: var(--purple);
-    color: var(--white);
-    padding: .4rem;
-    border-radius: .5rem;
-    transition: all 0.15s ease-out;
-    cursor: pointer;
-    user-select: none;
     z-index: 2;
 
 }
