--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,21 @@ body {
   background-color: var(--red);
   color: var(--white);
 }
+
+.btn-square {
+  border: none;
+  font-size: 1.4rem;
+  font-weight: 600;
+  background-color: var(--purple);
+  color: var(--white);
+  padding: .4rem;
+  border-radius: .5rem;
+  transition: all 0.15s ease-out;
+  cursor: pointer;
+  user-select: none;
+
+}
+
+.btn-square:hover {
+  transform: translateY(1px);
+}
