Experience component improvement

--- a/src/components/editable/editable-text-area/EditableTextArea.css
+++ b/src/components/editable/editable-text-area/EditableTextArea.css
@@ -1,5 +1,6 @@
 .editable-text-area {
     overflow-wrap: anywhere;
+    font-weight: 400;
 }
 
 .editable-text-area .static-text {
@@ -26,7 +27,7 @@
 .editable-text-area textarea {
     font-family: inherit;
     font-size: inherit;
-    font-weight: inherit;
+    font-weight: 400;
     line-height: inherit;
     padding: .5rem;
     border-radius: .25rem;
