--- a/src/components/job/Job.css
+++ b/src/components/job/Job.css
@@ -1,5 +1,5 @@
 .job {
-    margin-bottom: 2rem;
+    margin-bottom: 0rem;
 }
 
 .job .static-text {
@@ -10,7 +10,7 @@
         "position    company"
         "date        date"
         "description description";
-    gap: .25rem;
+    gap: .2rem;
 }
 
 .job .job-form {
@@ -22,7 +22,7 @@
         "date        date"
         "description description"
         "button button";
-    gap: .25rem;
+    gap: .2rem;
 }
 
 .position {
@@ -30,7 +30,7 @@
     font-size: 1.3rem;
     font-weight: 700;
     text-align: right;
-    margin-bottom: .5rem;
+    margin-bottom: .2rem;
     letter-spacing: .1rem;
 }
 
@@ -49,14 +49,14 @@
     grid-area: date;
     text-align: right;
     font-size: 1.2rem;
-    font-weight: 400;
-    margin-bottom: 1rem;
+    font-weight: 300;
+    margin-bottom: .25rem;
 }
 
 .description {
     grid-area: description;
     font-size: 1.1rem;
-    font-weight: 500;
+    font-weight: 400;
 
 }
 
@@ -96,7 +96,11 @@
 
 }
 
-.job-form button {
+.job-form .buttons {
+    display: flex;
+    gap: .5rem;
     grid-area: button;
-    justify-self: right;
+    justify-self: flex-end;
 }
+
+.job-form button {}
