--- a/src/components/job/Job.css
+++ b/src/components/job/Job.css
@@ -31,7 +31,7 @@
     font-weight: 700;
     text-align: right;
     margin-bottom: .2rem;
-    letter-spacing: .1rem;
+
 }
 
 .company {
@@ -39,7 +39,7 @@
     position: relative;
     font-size: 1.3rem;
     font-weight: 700;
-    letter-spacing: .1rem;
+
     padding-left: .4rem;
 }
 
@@ -83,22 +83,22 @@
     border: 1px solid var(--purple);
 }
 
-.position-input {
+.job-form .position-input {
     grid-area: position;
     text-align: right;
 }
 
-.company-input {
+.job-form .company-input {
     grid-area: company;
 }
 
-.date-input {
+.job-form .date-input {
     grid-area: date;
     text-align: right;
 
 }
 
-.description-input {
+.job-form .description-input {
     grid-area: description;
 
 }
@@ -109,5 +109,3 @@
     grid-area: button;
     justify-self: flex-end;
 }
-
-.job-form button {}
