--- a/src/components/cv/Cv.css
+++ b/src/components/cv/Cv.css
@@ -1,7 +1,7 @@
 .cv {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 25% 18% 1fr;
+    grid-template-rows: auto auto 1fr;
     grid-template-areas:
         "profile profile"
         "introduction skills"
