--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -1,12 +1,11 @@
 .profile {
     grid-area: profile;
-    margin: 2rem 0px;
+    margin: 4rem 0px 6rem 0px;
 }
 
-.profile-static-text {
+.profile-static-text, .profile-form {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     gap: 1.25rem;
     align-items: center;
     height: 100%;
@@ -45,4 +44,16 @@
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50rem;
+}
+
+/* ------------ Form Styles ---------------- */
+.profile-form input {
+    font-size: 1.2rem;
+    font-weight: 500;
+    padding: .5rem 1rem;
+}
+
+.profile-form-contact {
+    display: flex;
+    gap: 1rem;
 }
